--- a/Encapsulation/Encapsulation.vcxproj
+++ b/Encapsulation/Encapsulation.vcxproj
@@ -146,6 +146,9 @@
     <ClInclude Include="WindowRaylib.h" />
     <ClInclude Include="WindowSDL.h" />
   </ItemGroup>
+  <ItemGroup>
+    <Image Include="..\SCP.png" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
