--- a/Encapsulation/Encapsulation.vcxproj.filters
+++ b/Encapsulation/Encapsulation.vcxproj.filters
@@ -57,4 +57,9 @@
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <Image Include="..\SCP.png">
+      <Filter>Fichiers de ressources</Filter>
+    </Image>
+  </ItemGroup>
 </Project>
