--- a/Encapsulation/Encapsulation.vcxproj
+++ b/Encapsulation/Encapsulation.vcxproj
@@ -152,6 +152,10 @@
     <Image Include="..\SCP.bmp" />
     <Image Include="..\SCP.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Font Include="..\Daydream.ttf" />
+    <Font Include="..\FuturisticYourself.ttf" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
